fixed alignment issue

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -347,6 +347,10 @@ a {
     .work-container {
       .proj-container {
         max-width: 90%;
+
+        .proj-title {
+          text-align: center;
+        }
       }
     }
   }
